Fix horizontal scroll of web browser

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-<<<<<<< HEAD:root {
+:root {
     font-size: 1rem;
     box-sizing: border-box;
 }
@@ -9,11 +9,12 @@ html {
     background-color: white;
 }
 
-: body {
+body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: white;
     position: relative;
     padding-bottom: 10px;
+    overflow-x: hidden;
 }
 
 a {
@@ -121,13 +122,7 @@ a {
     border-collapse: collapse;
 }
 
-/*
-#underline1 {
-  border-bottom: 2px solid grey;
-    margin-bottom: 0.56rem;
-}
-*/
-# upload-side-container-text {
+#upload-side-container-text {
     margin-left: 5rem;
     display: flex;
     align-self: center;
@@ -213,12 +208,10 @@ button ~ span {
 
 .share-save-like-dislike {
     padding-top: 0.4rem;
-    */
 }
 
 .material-icons {
     margin-top: 0.1rem;
-    /*    padding-top: 0.3rem;*/
 }
 
 .btn {
